changed placeholder image on role.html

--- a/src/html/role.html
+++ b/src/html/role.html
@@ -23,7 +23,7 @@
                 position="Prison Officer"
                 salary-range="£20,905 - £32,290"
                 location="Nationwide"
-                img-url="http://via.placeholder.com/140x100"
+                img-url="/img/12-h61JnTq-copy.jpg"
         >
             No ordinary job,<br/> no ordinary officer
         </role-intro>
@@ -54,7 +54,7 @@
                     <text-image-block
                         quote="Life skills come in handy. It’s all about how you deal with challenging situations."
                         quote-source="Tricia, Prison Officer, HMP The Mount"
-                        img-url="http://via.placeholder.com/140x100"
+                        img-url="/img/12-h61JnTq-copy.jpg"
                     >
                     </text-image-block>
                 </div>
@@ -94,7 +94,7 @@
                 <text-image-block class="u-no-margin"
                                   quote="There is no typical day, but regular activities such as getting prisoners to work and education."
                                   quote-source="Steve, Prison Officer, HMP Norwich"
-                                  img-url="http://via.placeholder.com/140x100"
+                                  img-url="/img/12-h61JnTq-copy.jpg"
                 >
                 </text-image-block>
 
@@ -149,7 +149,7 @@
                 <text-image-block class="u-no-margin"
                                   quote="I can relate the training from the classroom to what I’m experiencing on the wings."
                                   quote-source="Scott, Prison Officer, HMP Wayland"
-                                  img-url="http://via.placeholder.com/140x100"
+                                  img-url="/img/12-h61JnTq-copy.jpg"
                 >
                 </text-image-block>
             </tab>
