Home page links
Added internal / external links
Add OSG to jobs
Replaced quote with video

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,7 +16,7 @@
 <page-container>
 
     <page-header carousel-images="/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg,/img/30-B3mC72t-copy_tablet.jpg,/img/header.jpg">
-        You, at your best<br/>Be a prison officer
+        You at your best<br/>Be a prison officer
     </page-header>
 
     <div class="call-to-action">
@@ -78,17 +78,10 @@
             <p class="medium"><strong>annual holiday</strong></p>
             <div class="enormous">10 weeks</div>
             <p class="medium"><strong>paid training</strong></p>
-            <a class="text-block__link">Learn about life as a prison officer </a>
+            <a class="text-block__link" href="role.html">Learn about life as a prison officer </a>
+            <h4>Hear Rebecca's story</h4>
+            <video-player src="https://www.youtube.com/embed/4GOW_lTB7jArel=0&amp;showinfo=0"></video-player>
         </text-block>
-    </div>
-    
-    <div class="l-half">
-        <text-image-block
-            quote="Every day we are able to change lives for the better"
-            text="Bev, Governor, HMP Norwich"
-            img-url="/img/12-h61JnTq-copy.jpg"
-        >
-        </text-image-block>
     </div>
 
     <div class="l-full">
@@ -99,7 +92,7 @@
                 <li>be honest, strong-minded and enjoy helping others</li>
             </ul>
             <p>You don’t need any formal qualifications although working as a prison officer gives you lots of opportunities to make the most of those you do have.</p>
-            <a class="text-block__link">How to apply to be prison officer</a>
+            <a class="text-block__link" href="apply.html">How to apply to be prison officer</a>
         </text-block>
     </div>
 
@@ -108,9 +101,20 @@
     </div>
     
     <div class="l-full">
+        <text-image-block
+            type="inlaid-text"
+            main-title="We're recruiting in London"
+            img-url="/img/12-h61JnTq-copy.jpg"
+        >
+            <a href="hmp-pentonville.html"><font color="blue">See jobs at HMP Pentonville ></font></a> 
+        </text-image-block>
+    </div>
+
+    <div class="l-full">
         <text-block main-title="See more prison and probation jobs">
-            <a class='text-block__link'>Probation officer</a>
-            <a class='text-block__link'>Probation service officer</a>
+            <a class='text-block__link' href="https://justicejobs.tal.net/vx/candidate/cms/6.%20Operational%20Support%20Grade%20Landing%20Page" target="_blank">Operational Support Grade (OSG)</a>
+            <a class='text-block__link' href="http://www.traintobeaprobationofficer.com/" target="_blank">Probation officer</a>
+            <a class='text-block__link' href="https://www.probationserviceofficers.co.uk/" target="_blank">Probation service officer</a>
         </text-block>
     </div>
 
