WIP: Begin styling error pages to look similar to current 404 page.

--- a/web/app/themes/ppj/error-pages/maintenance.html
+++ b/web/app/themes/ppj/error-pages/maintenance.html
@@ -5,11 +5,14 @@
     <title>Website Temporarily Unavailable</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/app/themes/ppj/dest/css/error-page.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow:400,700" />
   </head>
   <body>
-    <h1>Website Temporarily Unavailable</h1>
-    <p>Sorry – this website is temporarily unavailable while we perform essential maintenance.</p>
-    <p>We’ll be back soon.</p>
-    <p>In the meantime, you can find <a href="#">prison officer jobs on the Justice Jobs website</a>.</p>
+    <article>
+      <h1>Website Temporarily Unavailable</h1>
+      <p>Sorry – this website is temporarily unavailable while we perform essential maintenance.</p>
+      <p>We’ll be back soon.</p>
+      <p>In the meantime, you can find <a href="#">prison officer jobs on the Justice Jobs website</a>.</p>
+    </article>
   </body>
 </html>
