--- a/web/app/themes/ppj/error-pages/404.html
+++ b/web/app/themes/ppj/error-pages/404.html
@@ -5,20 +5,23 @@
     <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/app/themes/ppj/dest/css/error-page.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow:400,700" />
   </head>
   <body>
-    <h1>Page Not Found</h1>
-    <p>Sorry – we couldn’t find the page you’re looking for.</p>
-    <p>This usually happens for a couple of reasons:</p>
-    <ul>
-      <li>You could have followed an out of date link. We’ve recently made some changes to this website, so it’s possible that the page you’re looking for has moved.</li>
-      <li>If you typed the web address (URL) yourself, it may contain a typo. Check your spelling and try again.</li>
-    </ul>
-    <h2>Try one of these</h2>
-    <ul>
-      <li><a href="/">Visit our homepage</a> to find out more about working as a prison officer.</li>
-      <li>Find a <a href="#">prison officer job</a> near you.</li>
-      <li>If you think there’s a problem with this website that we should know about, please take a moment to <a href="#">tell us about it</a>.</li>
-    </ul>
+    <article>
+      <h1>Page Not Found</h1>
+      <p>Sorry – we couldn’t find the page you’re looking for.</p>
+      <p>This usually happens for a couple of reasons:</p>
+      <ul>
+        <li>You could have followed an out of date link. We’ve recently made some changes to this website, so it’s possible that the page you’re looking for has moved.</li>
+        <li>If you typed the web address (URL) yourself, it may contain a typo. Check your spelling and try again.</li>
+      </ul>
+      <h2>Try one of these</h2>
+      <ul>
+        <li><a href="/">Visit our homepage</a> to find out more about working as a prison officer.</li>
+        <li>Find a <a href="/find-a-job/">prison officer job</a> near you.</li>
+        <li>If you think there’s a problem with this website that we should know about, please take a moment to <a href="https://form.jotformeu.com/80654014475354" target="_blank">tell us about it</a>.</li>
+      </ul>
+    </article>
   </body>
 </html>
