--- a/web/app/themes/ppj/error-pages/500.html
+++ b/web/app/themes/ppj/error-pages/500.html
@@ -5,12 +5,15 @@
     <title>Something went wrong</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/app/themes/ppj/dest/css/error-page.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow:400,700" />
   </head>
   <body>
-    <h1>Something went wrong</h1>
-    <p>Sorry – something went wrong with this website.</p>
-    <p>These problems are usually temporary, so we recommend you try again later.</p>
-    <p>If the problem persists, you can also <a href="#">find prison officer jobs on the Justice Jobs website</a>.</p>
-    <p>If you think there’s a problem with this website that we should know about, please take a moment to <a href="#">tell us about it</a>.</p>
+    <article>
+      <h1>Something went wrong</h1>
+      <p>Sorry – something went wrong with this website.</p>
+      <p>These problems are usually temporary, so we recommend you try again later.</p>
+      <p>If the problem persists, you can also <a href="https://justicejobs.tal.net/vx/lang-en-GB/mobile-0/appcentre-1/brand-2/xf-a5f8e63220f3/candidate/jobboard/vacancy/3/adv/?ftq=prison+officer" target="_blank">find prison officer jobs on the Justice Jobs website</a>.</p>
+      <p>If you think there’s a problem with this website that we should know about, please take a moment to <a href="https://form.jotformeu.com/80654014475354" target="_blank">tell us about it</a>.</p>
+    </article>
   </body>
 </html>
