--- a/web/app/themes/ppj/error-pages/500.html
+++ b/web/app/themes/ppj/error-pages/500.html
@@ -15,5 +15,15 @@
       <p>If the problem persists, you can also <a href="https://justicejobs.tal.net/vx/lang-en-GB/mobile-0/appcentre-1/brand-2/xf-a5f8e63220f3/candidate/jobboard/vacancy/3/adv/?ftq=prison+officer" target="_blank">find prison officer jobs on the Justice Jobs website</a>.</p>
       <p>If you think there’s a problem with this website that we should know about, please take a moment to <a href="https://form.jotformeu.com/80654014475354" target="_blank">tell us about it</a>.</p>
     </article>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-61690103-18', 'auto');
+      ga('require', 'linkid', 'linkid.js');
+      ga('send', 'event', '500 Internal Server Error', window.location.href, document.referrer);
+    </script>
   </body>
 </html>
