Make error page headings sentence case

--- a/web/app/themes/ppj/error-pages/maintenance.html
+++ b/web/app/themes/ppj/error-pages/maintenance.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <article>
-      <h1>Website Temporarily Unavailable</h1>
+      <h1>Website temporarily unavailable</h1>
       <p>Sorry – this website is temporarily unavailable while we perform essential maintenance.</p>
       <p>We’ll be back soon.</p>
       <p>In the meantime, you can find <a href="https://justicejobs.tal.net/vx/lang-en-GB/mobile-0/appcentre-1/brand-2/xf-a5f8e63220f3/candidate/jobboard/vacancy/3/adv/?ftq=prison+officer" target="_blank">prison officer jobs on the Justice Jobs website</a>.</p>
