--- a/web/app/themes/ppj/error-pages/404.html
+++ b/web/app/themes/ppj/error-pages/404.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <article>
-      <h1>Page Not Found</h1>
+      <h1>Page not found</h1>
       <p>Sorry – we couldn’t find the page you’re looking for.</p>
       <p>This usually happens for a couple of reasons:</p>
       <ul>
