--- a/web/app/themes/ppj/error-pages/500.html
+++ b/web/app/themes/ppj/error-pages/500.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Something went wrong</title>
+    <title>Something Went Wrong</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/app/themes/ppj/dest/css/error-page.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow:400,700" />
