removed link to /find-a-job/ from 404 error page
can re add when we have confirmation of error page content/design

--- a/web/app/themes/ppj/error-pages/404.html
+++ b/web/app/themes/ppj/error-pages/404.html
@@ -18,8 +18,7 @@
       </ul>
       <h2>Try one of these</h2>
       <ul>
-        <li><a href="/">Visit our homepage</a> to find out more about working as a prison officer.</li>
-        <li>Find a <a href="/find-a-job/">prison officer job</a> near you.</li>
+        <li><a href="/">Visit our homepage</a> to find out more about prison and probation jobs.</li>
         <li>If you think there’s a problem with this website that we should know about, please take a moment to <a href="https://form.jotformeu.com/80654014475354" target="_blank">tell us about it</a>.</li>
       </ul>
     </article>
