--- a/web/app/themes/ppj/error-pages/404.html
+++ b/web/app/themes/ppj/error-pages/404.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <script>
+      window.dataLayer = [{
+        error_page: '404 Page Not Found'
+      }];
+    </script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-N2SCJMC');</script>
+    <!-- End Google Tag Manager -->
+
     <link rel="stylesheet" href="/app/themes/ppj/dest/css/error-page.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow:400,700" />
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N2SCJMC"
+                      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <article>
       <h1>Page not found</h1>
       <p>Sorry – we couldn’t find the page you’re looking for.</p>
@@ -22,15 +41,5 @@
         <li>If you think there’s a problem with this website that we should know about, please take a moment to <a href="https://form.jotformeu.com/80654014475354" target="_blank">tell us about it</a>.</li>
       </ul>
     </article>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-61690103-18', 'auto');
-      ga('require', 'linkid', 'linkid.js');
-      ga('send', 'event', '404 Page Not Found', window.location.href, document.referrer);
-    </script>
   </body>
 </html>
