--- a/web/app/themes/ppj/error-pages/500.html
+++ b/web/app/themes/ppj/error-pages/500.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <title>Something Went Wrong</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <script>
+      window.dataLayer = [{
+        error_page: '500 Internal Server Error'
+      }];
+    </script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-N2SCJMC');</script>
+    <!-- End Google Tag Manager -->
+
     <link rel="stylesheet" href="/app/themes/ppj/dest/css/error-page.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow:400,700" />
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N2SCJMC"
+                      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <article>
       <h1>Something went wrong</h1>
       <p>Sorry – something went wrong with this website.</p>
@@ -15,15 +34,5 @@
       <p>If the problem persists, you can also <a href="https://justicejobs.tal.net/vx/lang-en-GB/mobile-0/appcentre-1/brand-2/xf-a5f8e63220f3/candidate/jobboard/vacancy/3/adv/?ftq=prison+officer" target="_blank">find prison officer jobs on the Justice Jobs website</a>.</p>
       <p>If you think there’s a problem with this website that we should know about, please take a moment to <a href="https://form.jotformeu.com/80654014475354" target="_blank">tell us about it</a>.</p>
     </article>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-61690103-18', 'auto');
-      ga('require', 'linkid', 'linkid.js');
-      ga('send', 'event', '500 Internal Server Error', window.location.href, document.referrer);
-    </script>
   </body>
 </html>
